--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -245,104 +245,161 @@
 <body>
     <div class="container">
         <div class="content">
-            <h1>Dinky Coop</h1>
-            <h3 class="title">System</h3>
-            <table>
-                <tr>
-                    <td><b>Uptime</b></td>
-                    <td colspan="3"><span id="uptime"></span></td>
-                </tr>
-                <tr>
-                    <td><b>CPU Temperature</b></td>
-                    <td><span id="cpu_temp_min" style="color: #0d98ba;"></span></td>
-                    <td><span id="cpu_temp" style="font-weight: bold;"></span></td>
-                    <td><span id="cpu_temp_max" style="color: #ff8c00;"></span></td>
-                </tr>
-            </table>
-            <h3 class="title">Inside</h3>
-            <table>
-                <tr>
-                    <td><b>Temperature</b></td>
-                    <td><span id="temp_in_min" style="color: #0d98ba;"></span></td>
-                    <td><span id="temp_in" style="font-weight: bold;"></span></td>
-                    <td><span id="temp_in_max" style="color: #ff8c00;"></span></td>
-                </tr>
-                <tr>
-                    <td><b>Humidity</b></td>
-                    <td><span id="hum_in_min" style="color: #0d98ba;"></span></td>
-                    <td><span id="hum_in" style="font-weight: bold;"></span></td>
-                    <td><span id="hum_in_max" style="color: #ff8c00;"></span></td>
-                </tr>
-            </table>
-            <h3 class="title">Outside</h3>
-            <table>
-                <tr>
-                    <td><b>Temperature</b></td>
-                    <td><span id="temp_out_min" style="color: #0d98ba;"></span></td>
-                    <td><span id="temp_out" style="font-weight: bold;"></span></td>
-                    <td><span id="temp_out_max" style="color: #ff8c00;"></span></td>
-                </tr>
-                <tr>
-                    <td><b>Humidity</b></td>
-                    <td><span id="hum_out_min" style="color: #0d98ba;"></span></td>
-                    <td><span id="hum_out" style="font-weight: bold;"></span></td>
-                    <td><span id="hum_out_max" style="color: #ff8c00;"></span></td>
-                </tr>
-            </table>
-            <h3 class="title">Door Control</h3>
-            <table>
-                <tr>
-                    <td>
-                        <span id="state"></span>
-                        <div class="button-container" style="margin-top: 20px;">
-                            <button class="button close" onclick="sendCloseCommand()">Close</button>
-                            <button class="button stop" onclick="sendStopCommand()">Stop</button>
-                            <button class="button open" onclick="sendOpenCommand()">Open</button>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-            <div class="toggle-container" style="margin-bottom: 0px;">
-                <h3 class="title" style="margin-right: 20px; margin-top: 10px;">Auto Mode</h3>
-                <div class="toggle{% if auto_mode %} on{% endif %}" id="toggle" onclick="toggleSwitch()"></div>
+            <h1>Coop Door</h1>
+            <div class="collapsible">
+                <h3 class="title" onclick="toggleSection('door_control')">Door Control</h3>
+                <div id="door_control" class="content-section">
+                    <table>
+                        <tr>
+                            <td>
+                                <span id="state"></span>
+                                <div class="button-container" style="margin-top: 20px;">
+                                    <button class="button close" onclick="sendCloseCommand()">Close</button>
+                                    <button class="button stop" onclick="sendStopCommand()">Stop</button>
+                                    <button class="button open" onclick="sendOpenCommand()">Open</button>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                    <div class="toggle-container" style="margin-bottom: 0px;">
+                        <h4 class="title" style="margin-right: 20px; margin-top: 10px;">Auto Mode</h3>
+                        <div class="toggle{% if auto_mode %} on{% endif %}" id="toggle" onclick="toggleSwitch()"></div>
+                    </div>
+                    <div id="auto_info" class="auto_info {% if auto_mode %} on{% endif %}">
+                        <table style="margin-top: 0px;">
+                            <tr>
+                                <td colspan="2">
+                                    <form onsubmit="handleSubmit(event)">
+                                        <label for="sunrise_offset">Open door at sunrise plus </label>
+                                        <input type="number" id="sunrise_offset" name="sunrise_offset" step="1" maxlength="4" style="width: 50px;" value={{ sunrise_offset }} required>
+                                        <label> minutes.</label><br/>
+            
+                                        <label for="sunset_offset">Close door at sunset plus </label>
+                                        <input type="number" id="sunset_offset" name="sunset_offset" step="1" maxlength="4" style="width: 50px;" value={{ sunset_offset }} required>
+                                        <label> minutes.</label><br/>
+            
+                                        <div class="button-container" style="margin-top: 20px;">
+                                            <button class="button open" type="submit">Save</button>
+                                        </div>
+                                    </form>
+                                </td>
+                            <tr>
+                                <td><b>Sunrise</b></td>
+                                <td><span id="sunrise"></span></td>
+                            </tr>
+                            <tr>
+                                <td><b>Sunset</b></td>
+                                <td><span id="sunset"></span></td>
+                            </tr>
+                            <tr>
+                                <td><b>Door Opens in</b></td>
+                                <td><span id="tu_open"></span></td>
+                            </tr>
+                            <tr>
+                                <td><b>Door Closes in</b></td>
+                                <td><span id="tu_close"></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <div id="auto_info" class="auto_info {% if auto_mode %} on{% endif %}">
-            <table style="margin-top: 0px;">
-                <tr>
-                    <td colspan="2">
-                        <form onsubmit="handleSubmit(event)">
-                            <label for="sunrise_offset">Open door at sunrise plus </label>
-                            <input type="number" id="sunrise_offset" name="sunrise_offset" step="1" maxlength="4" style="width: 50px;" value={{ sunrise_offset }} required>
-                            <label> minutes.</label><br/>
-
-                            <label for="sunset_offset">Close door at sunset plus </label>
-                            <input type="number" id="sunset_offset" name="sunset_offset" step="1" maxlength="4" style="width: 50px;" value={{ sunset_offset }} required>
-                            <label> minutes.</label><br/>
-
-                            <div class="button-container" style="margin-top: 20px;">
-                                <button class="button open" type="submit">Save</button>
-                            </div>
-                        </form>
-                    </td>
-                <tr>
-                    <td><b>Sunrise</b></td>
-                    <td><span id="sunrise"></span></td>
-                </tr>
-                <tr>
-                    <td><b>Sunset</b></td>
-                    <td><span id="sunset"></span></td>
-                </tr>
-                <tr>
-                    <td><b>Door Opens in</b></td>
-                    <td><span id="tu_open"></span></td>
-                </tr>
-                <tr>
-                    <td><b>Door Closes in</b></td>
-                    <td><span id="tu_close"></span></td>
-                </tr>
-            </table>
+            <div class="collapsible">
+                <h3 class="title" onclick="toggleSection('system')">System</h3>
+                <div id="system" class="content-section">
+                    <table>
+                        <tr>
+                            <td><b>Uptime</b></td>
+                            <td colspan="3"><span id="uptime"></span></td>
+                        </tr>
+                        <tr>
+                            <td><b>CPU Temperature</b></td>
+                            <td><span id="cpu_temp_min" style="color: #0d98ba;"></span></td>
+                            <td><span id="cpu_temp" style="font-weight: bold;"></span></td>
+                            <td><span id="cpu_temp_max" style="color: #ff8c00;"></span></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            
+            <div class="collapsible">
+                <h3 class="title" onclick="toggleSection('temperature')">Temperature</h3>
+                <div id="temperature" class="content-section">
+                    <h4 class="title">Inside</h2>
+                    <table>
+                        <tr>
+                            <td><b>Temperature</b></td>
+                            <td><span id="temp_in_min" style="color: #0d98ba;"></span></td>
+                            <td><span id="temp_in" style="font-weight: bold;"></span></td>
+                            <td><span id="temp_in_max" style="color: #ff8c00;"></span></td>
+                        </tr>
+                        <tr>
+                            <td><b>Humidity</b></td>
+                            <td><span id="hum_in_min" style="color: #0d98ba;"></span></td>
+                            <td><span id="hum_in" style="font-weight: bold;"></span></td>
+                            <td><span id="hum_in_max" style="color: #ff8c00;"></span></td>
+                        </tr>
+                    </table>
+                <!-- Outside Section -->
+            
+                    <h4 class="title">Outside</h3>
+                    <table>
+                        <tr>
+                            <td><b>Temperature</b></td>
+                            <td><span id="temp_out_min" style="color: #0d98ba;"></span></td>
+                            <td><span id="temp_out" style="font-weight: bold;"></span></td>
+                            <td><span id="temp_out_max" style="color: #ff8c00;"></span></td>
+                        </tr>
+                        <tr>
+                            <td><b>Humidity</b></td>
+                            <td><span id="hum_out_min" style="color: #0d98ba;"></span></td>
+                            <td><span id="hum_out" style="font-weight: bold;"></span></td>
+                            <td><span id="hum_out_max" style="color: #ff8c00;"></span></td>
+                        </tr>
+                    </table>            
             </div>
         </div>
     </div>
+
+    <script>
+        function toggleSection(id) {
+            const section = document.getElementById(id);
+            if (section.style.display === "none" || !section.style.display) {
+                section.style.display = "block";
+            } else {
+                section.style.display = "none";
+            }
+        }
+
+        // Initialize all sections as collapsed
+        document.querySelectorAll('.content-section').forEach(section => {
+            section.style.display = "block";
+        });
+    </script>
+
+    <style>
+        .collapsible h3 {
+            cursor: pointer;
+            padding: 10px;
+            margin: 0;
+            background-color: #f9f9f9; /* Light background for better visibility */
+            border: 1px solid #ccc; /* Border around the header */
+            border-radius: 5px; /* Rounded corners for a softer look */
+        }
+
+        .collapsible h3:hover {
+            background-color: #e9e9e9; /* Slightly darker on hover */
+        }
+
+        .content-section {
+            display: none; /* Initially collapsed */
+            padding: 10px;
+            border: 1px solid #ccc; /* Border for the content */
+            border-top: none; /* Avoid double border between header and content */
+            border-radius: 0 0 5px 5px; /* Rounded bottom corners */
+            background-color: #fff; /* White background for content */
+        }
+    </style>
+
 </body>
+
 </html>
