added picture to webcam

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -316,7 +316,7 @@
             <div class="collapsible">
                 <h3 class="title" onclick="toggleSection('webcam_section')">Webcam Livefeed</h3>
                 <div id="webcam_section" class="content-section">
-                    <img id="webcamFeed" style="width: 100%; height: auto;">
+                    <img id="webcamFeed" src="static/waiting.png" style="width: 100%; height: auto;">
                 </div>
             </div>
             <div class="collapsible">
