i will quit for today.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -204,6 +204,7 @@
         }
     </style>
     <script>
+
         if ('serviceWorker' in navigator) {
                 navigator.serviceWorker.register('/sw.js').then((registration) => {
                     console.log('[PWA] Service worker registered:', registration);
@@ -220,6 +221,36 @@
                         }
                     });
                     });
+                    function urlBase64ToUint8Array(base64String) {
+                    const padding = '='.repeat((4 - base64String.length % 4) % 4);
+                    const base64 = (base64String + padding)
+                        .replace(/-/g, '+')
+                        .replace(/_/g, '/');
+
+                    const rawData = window.atob(base64);
+                    const outputArray = new Uint8Array(rawData.length);
+
+                    for (let i = 0; i < rawData.length; ++i) {
+                        outputArray[i] = rawData.charCodeAt(i);
+                    }
+                    return outputArray;
+                }
+
+                return Notification.requestPermission().then(permission => {
+                    if (permission !== 'granted') {
+                        throw new Error('Permission not granted for notifications');
+                    }
+                    let pwaPublicKey = "{{ pwa_public_key }}";
+                    console.log('PWA public key:', pwaPublicKey);
+
+                    const applicationServerKey = urlBase64ToUint8Array(pwaPublicKey);
+                    console.log('Application server key:', applicationServerKey);
+
+                    return registration.pushManager.subscribe({
+                        userVisibleOnly: true,
+                        applicationServerKey: applicationServerKey
+                    });
+                });
                 });
                 }
 
